--- a/.travis.yml
+++ b/.travis.yml
@@ -51,19 +51,6 @@ after_script:
 notifications:
   email:
     recipients:
-      - flyingmana@googlemail.com
+      - olegkulik1985@gmail.com
     on_success: never
     on_failure: always
-  irc:
-    channels:
-      - "irc.freenode.org#magento-composer"
-    on_success: change # default: always
-    on_failure: always # default: always
-  webhooks:
-    urls:
-      - https://webhooks.gitter.im/e/c5ef1e9abfc452125de8
-      - https://webhooks.gitter.im/e/c15428595390b938ee38
-      - https://webhooks.gitter.im/e/5126f06d0f4f55230ee0
-    on_success: change  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
-    on_start: false     # default: false
