--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
     "name":"magento-hackathon/magento-composer-installer",
-    "description":"Composer installer for Magento modules",
+    "description":"Composer installer for Magento modules and core",
     "keywords":[ "composer-installer", "magento"],
-    "minimum-stability":"stable",
+    "minimum-stability":"dev",
     "type":"composer-plugin",
     "license":"OSL-3.0",
-    "homepage":"https://github.com/magento-hackathon/magento-composer-installer",
+    "homepage":"https://github.com/SlayerBirden/magento-composer-installer",
     "repositories": [
         {
             "type": "composer",
@@ -36,6 +36,10 @@
         {
             "name":"Vinai Kopp",
             "email":"vinai@netzarbeiter.com"
+        },
+        {
+            "name":"Oleg Kulik",
+            "email":"olegkulik1985@gmail.com"
         }
     ],
     "require":{
@@ -68,7 +72,8 @@
         }
     },
     "bin": [
-        "bin/magento-composer-installer.php"
+        "bin/magento-composer-installer.php",
+        "bin/installer_core_utils.php"
     ],
     "archive": {
         "exclude": [
@@ -76,7 +81,6 @@
             "/tests/FullStackTest/"
         ]
     },
-    "test_version":"999.0.0",
     "extra":{
         "class":"MagentoHackathon\\Composer\\Magento\\Plugin"
     }
