--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
   - 5.5
   - 5.4
   - 5.3
-  #- hhvm
+  - hhvm
   
 env:
   - TEST_SUITE=Unit
@@ -17,7 +17,6 @@ matrix:
       env: TEST_SUITE=Static
   allow_failures:
     - php: 5.3
-    - php: 5.4
     - php: hhvm
     - env: TEST_SUITE=Static
 
