--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ php:
   - 5.6
   - 5.5
   - 5.4
-  - 5.3
   - hhvm
   
 env:
   - TEST_SUITE=Unit
-  - TEST_SUITE=Fullstack
+  # don't need fullstack for now
+  #- TEST_SUITE=Fullstack
   
 matrix:
   fast_finish: true
@@ -16,7 +16,6 @@ matrix:
     - php: 5.6
       env: TEST_SUITE=Static
   allow_failures:
-    - php: 5.3
     - php: hhvm
     - env: TEST_SUITE=Static
 
